--- a/src/app/componentes/crear-negocio/crear-negocio.component.html
+++ b/src/app/componentes/crear-negocio/crear-negocio.component.html
@@ -44,7 +44,7 @@
                     <div class="col-sm-3">
                         <button type="submit" [disabled]="archivos == null" class="btn btn-primary"
                             (click)="subirImagenes()">
-    
+
                             <i class="fa-solid fa-cloud-arrow-up me-2"></i>Subir imágenes
                         </button>
                     </div>
@@ -93,35 +93,34 @@
                         </button>
                     </div>
                 </div>
+
                 <div class="mb-3 row">
                     <label class="col-sm-2 col-form-label">Teléfonos: </label>
-                    <div class="col-sm-10">
-                        <!-- @for (item of telefonos; track $index) {
-                        <div class="row mb-2 ">
+                    <div class="col-sm-8">
+                        <div *ngFor="let telefono of registroNegocioDTO.telefono; let i = index" class="row mb-2">
                             <div class="col">
-                                <input class="form-control" placeholder="Tipo" type="text" name="tipo-{{$index}}"
-                                    [(ngModel)]="item.tipo" required />
-    
+                                <input class="form-control" placeholder="Teléfono" type="text" name="telefono-{{i}}"
+                                    [(ngModel)]="registroNegocioDTO.telefono[i]" required />
                             </div>
-                            <div class="col">
-                                <input class="form-control" placeholder="Nuemro" type="time"
-                                    name="nuemro-{{$index}}" [(ngModel)]="item.numero" required />
-    
-    
+                            <div class="col-auto">
+                                <button type="button" class="btn btn-danger" (click)="eliminarTelefono(i)">
+                                    <i class="fa-solid fa-trash me-1"></i>Eliminar
+                                </button>
                             </div>
                         </div>
-                        } -->
-
-
-
+                    </div>
+                    <div class="col-sm-2 text-end">
+                        <button type="button" class="btn btn-primary" (click)="agregarTelefono()">
+                            <i class="fa-solid fa-circle-plus me-1"></i>Agregar teléfono
+                        </button>
                     </div>
                 </div>
                 <button class="btn btn-primary" (click)="crearNegocio()" [disabled]="f.invalid">
                     <i class="fa-solid fa-circle-plus me-1"></i>Crear negocio
                 </button>
-                </div>
+            </div>
 
-                <app-alerta [alerta] = "alerta"></app-alerta>
+            <app-alerta [alerta]="alerta"></app-alerta>
         </form>
     </div>
 </div>
