--- a/src/app/componentes/actualizar-negocio/actualizar-negocio.component.html
+++ b/src/app/componentes/actualizar-negocio/actualizar-negocio.component.html
@@ -79,31 +79,29 @@
                 </div>
                 <div class="mb-3 row">
                     <label class="col-sm-2 col-form-label">Teléfonos: </label>
-                    <div class="col-sm-10">
-                        <!-- @for (item of telefonos; track $index) {
-                        <div class="row mb-2 ">
+                    <div class="col-sm-8">
+                        <div *ngFor="let telefono of actualizarNegocioDTO.telefono; let i = index" class="row mb-2">
                             <div class="col">
-                                <input class="form-control" placeholder="Tipo" type="text" name="tipo-{{$index}}"
-                                    [(ngModel)]="item.tipo" required />
-    
+                                <input class="form-control" placeholder="Teléfono" type="text" name="telefono-{{i}}"
+                                    [(ngModel)]="actualizarNegocioDTO.telefono[i]" required />
                             </div>
-                            <div class="col">
-                                <input class="form-control" placeholder="Nuemro" type="time"
-                                    name="nuemro-{{$index}}" [(ngModel)]="item.numero" required />
-    
-    
+                            <div class="col-auto">
+                                <button type="button" class="btn btn-danger" (click)="eliminarTelefono(i)">
+                                    <i class="fa-solid fa-trash me-1"></i>Eliminar
+                                </button>
                             </div>
                         </div>
-                        } -->
-
-
-
+                    </div>
+                    <div class="col-sm-2 text-end">
+                        <button type="button" class="btn btn-primary" (click)="agregarTelefono()">
+                            <i class="fa-solid fa-circle-plus me-1"></i>Agregar teléfono
+                        </button>
                     </div>
                 </div>
                 <button class="btn btn-primary" (click)="actualizarNegocio()" [disabled]="f.invalid">
-                    <i class="fa-solid fa-circle-plus me-1"></i>Crear negocio
+                    <i class="fa-solid fa-circle-plus me-1"></i>Actualizar negocio
                 </button>
-                </div>di
+                </div>
         </form>
     </div>
 </div>
