--- a/src/app/componentes/detalle-negocio/detalle-negocio.component.html
+++ b/src/app/componentes/detalle-negocio/detalle-negocio.component.html
@@ -115,6 +115,16 @@
                                    name="horaFin-{{i}}" [(ngModel)]="item.horaFin" required />
                         </div>
                     </div>
+                  
+                    <div class="form-group mb-3">
+                        <label>Teléfonos:</label>
+                        <div *ngFor="let telefono of negocio.telefono; let i = index" class="row mb-2">
+                            <div class="col">
+                                <span class="form-control-plaintext">{{ telefono }}</span>
+                            </div>
+                        </div>
+                    </div>
+
 
                     <div class="form-group mb-3">
                         <label for="descripcion">Descripción</label>
